--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <div id="bannerbox">
+            <img loading="lazy" src="https://www.gujarattourism.com/content/dam/gujrattourism/images/madhavpur/common-banner.jpg">
             <h1>Relish The Beauty of</h1>
             <br>
             <h1 id="lowerheading">Wonderful Gujarat</h1>
