--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gujarat Tourism</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="kj.css">
+    <link rel="stylesheet" href="/kj.css">
     <link rel="shortcut icon" href="https://seeklogo.com/images/G/gujarat-tourism-logo-FAAFFB32AE-seeklogo.com.png">
 </head>
 
@@ -35,7 +35,7 @@
                 
 
                 <div id="sliderbg">
-                    <div id="img4" class="imgs"><img src="//04.jpg"></div>
+                    <div id="img4" class="imgs"><img src="/img/04.jpg"></div>
                     <div id="img2" class="imgs"><img src="/img/02.jpg"></div>
                     <div id="img3" class="imgs"><img src="/img/03.jpeg"></div>
                     <div id="img5" class="imgs"><img src="/img/05.jpg"></div>
