--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
                 
 
                 <div id="sliderbg">
-                    <div id="img4" class="imgs"><img src="/04.jpg"></div>
-                    <div id="img2" class="imgs"><img src="/02.jpg"></div>
-                    <div id="img3" class="imgs"><img src="/03.jpeg"></div>
-                    <div id="img5" class="imgs"><img src="/05.jpg"></div>
-                    <div id="img6" class="imgs"><img src="/06.jpg"></div>
-                    <div id="img7" class="imgs"><img src="/07.jpeg"></div>
-                    <div id="img1" class="imgs"><img src="/01.jpg"></div>
-                    <div id="img8" class="imgs"><img src="/08.jpg"></div>
-                    <div id="img9" class="imgs"><img src="/09.jpg"></div>
-                    <div id="img10" class="imgs"><img src="/10.png"></div>
+                    <div id="img4" class="imgs"><img src="04.jpg"></div>
+                    <div id="img2" class="imgs"><img src="02.jpg"></div>
+                    <div id="img3" class="imgs"><img src="03.jpeg"></div>
+                    <div id="img5" class="imgs"><img src="05.jpg"></div>
+                    <div id="img6" class="imgs"><img src="06.jpg"></div>
+                    <div id="img7" class="imgs"><img src="07.jpeg"></div>
+                    <div id="img1" class="imgs"><img src="01.jpg"></div>
+                    <div id="img8" class="imgs"><img src="08.jpg"></div>
+                    <div id="img9" class="imgs"><img src="09.jpg"></div>
+                    <div id="img10" class="imgs"><img src="10.png"></div>
 
 
                 </div>
