--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gujarat Tourism</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="/kj.css">
+    <link rel="stylesheet" href="istyle2.css">
     <link rel="shortcut icon" href="https://seeklogo.com/images/G/gujarat-tourism-logo-FAAFFB32AE-seeklogo.com.png">
 </head>
-
 <body>
     <div id="mainbox">
         <div id="headbox">
@@ -26,48 +24,27 @@
             <!-- <h1>Relish The Beauty of</h1> -->
             <!-- <br> -->
             <!-- <h1 id="lowerheading">Wonderful Gujarat</h1> -->
-            <video loop muted autoplay class="video">
-                <source src="/video.mp4">
-            </video>
+             <video loop muted autoplay class="video">
+                <source src="video.mp4">
+             </video>
         </div>
-        <div id="sliderbox" >
-            <div class=" bgtrev">
-                
-
-                <div id="sliderbg">
-                    <div id="img4" class="imgs"><img src="04.jpg"></div>
-                    <div id="img2" class="imgs"><img src="02.jpg"></div>
-                    <div id="img3" class="imgs"><img src="03.jpeg"></div>
-                    <div id="img5" class="imgs"><img src="05.jpg"></div>
-                    <div id="img6" class="imgs"><img src="06.jpg"></div>
-                    <div id="img7" class="imgs"><img src="07.jpeg"></div>
-                    <div id="img1" class="imgs"><img src="01.jpg"></div>
-                    <div id="img8" class="imgs"><img src="08.jpg"></div>
-                    <div id="img9" class="imgs"><img src="09.jpg"></div>
-                    <div id="img10" class="imgs"><img src="10.png"></div>
-
-
-                </div>
-            </div>
+        <div id="sliderbox">
             <!-- <div class="arrowbox">
                 <img src="https://e7.pngegg.com/pngimages/252/452/png-clipart-emoji-sticker-symbol-arrow-emoticon-arrow-emoji-blue-angle-thumbnail.png" class="arrow" id="left">
             </div> -->
             <div id="frame">
                 <div id="slider">
-                    <div id="img4" class="imgs"><img src="/04.jpg"></div>
-                    <div id="img2" class="imgs"><img src="/02.jpg"></div>
-                    <div id="img3" class="imgs"><img src="/03.jpeg"></div>
-                    <div id="img5" class="imgs"><img src="/05.jpg"></div>
-                    <div id="img6" class="imgs"><img src="/06.jpg"></div>
-                    <div id="img7" class="imgs"><img src="/07.jpeg"></div>
-                    <div id="img1" class="imgs"><img src="/01.jpg"></div>
-                    <div id="img8" class="imgs"><img src="/08.jpg"></div>
-                    <div id="img9" class="imgs"><img src="/09.jpg"></div>
-                    <div id="img10" class="imgs"><img src="/10.png"></div>
-
-
+                    <div id="img1" class="imgs"><img src="04.jpg"></div>
+                    <div id="img2" class="imgs"><img src="02.jpg"></div>
+                    <div id="img3" class="imgs"><img src="03.jpg"></div>
+                    <div id="img4" class="imgs"><img src="01.jpg"></div>
+                    <div id="img5" class="imgs"><img src="05.jpg"></div>
+                    <div id="img6" class="imgs"><img src="06.jpg"></div>
+                    <div id="img7" class="imgs"><img src="07.jpg"></div>
+                    <div id="img8" class="imgs"><img src="08.jpg"></div>
+                    <div id="img9" class="imgs"><img src="09.jpg"></div>
+                    <div id="img10" class="imgs"><img src="10.jpg"></div>
                 </div>
-
             </div>
             <!-- <div class="arrowbox">
                 <img src="arrow2.png" class="arrow" id="right">
@@ -80,11 +57,7 @@
                 <div class="festtext">
                     <h1>Rann Utsav</h1>
                     <br><br><br>
-                    <p>A plethora of varied hues, profusion of design, superfluity of culture, cornucopia of music and
-                        dance, all together in the arid lands of Kutch creates a mosaic of exquisiteness which reflects
-                        the identity and spirit of the region. Kutch, one of the most ecologically and ethnically
-                        diverse district of the state is a celebratory land of art, crafts, music, dance, people and
-                        nature.</p>
+                    <p>A plethora of varied hues, profusion of design, superfluity of culture, cornucopia of music and dance, all together in the arid lands of Kutch creates a mosaic of exquisiteness which reflects the identity and spirit of the region. Kutch, one of the most ecologically and ethnically diverse district of the state is a celebratory land of art, crafts, music, dance, people and nature.</p>
                     <br><br>
                     <p>Location: Kutch <br><br> &#128197; 10th November 2023 to 25th February</p>
                 </div>
@@ -94,50 +67,36 @@
                 <div class="festtext">
                     <h1 style="font-size:1.8rem">International Kite Festival</h1>
                     <br><br><br>
-                    <p>The festival of Uttarayan is a uniquely Gujarati phenomenon, when the skies over most cities of
-                        the state fill with kites from before dawn until well after dark. The festival marks the days in
-                        the Hindu calendar when winter begins turning to summer, known as Makar Sankranti or Uttarayan.
-                    </p>
+                    <p>The festival of Uttarayan is a uniquely Gujarati phenomenon, when the skies over most cities of the state fill with kites from before dawn until well after dark. The festival marks the days in the Hindu calendar when winter begins turning to summer, known as Makar Sankranti or Uttarayan.</p>
                     <br><br>
                     <p>Location: Ahmedabad <br><br> &#128197; 7th January to 14th January</p>
                 </div>
-                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/international-kite-festival.jpg"
-                    alt="">
+                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/international-kite-festival.jpg" alt="">
             </div>
             <div class="fest">
                 <div class="festtext">
                     <h1>Tarnetar fair</h1>
                     <br><br><br>
-                    <p>Based on the legend of Draupadi's swayamvara, this fair is a celebration of ethnic Gujarat’s
-                        folk-dance, music, costumes and the arts, centered around young tribal men and women seeking
-                        marriage partners. But even for those not interested in finding a spouse, the romance and
-                        excitement in the air are captivating, and every year the fair seems only to grow in popularity,
-                        attracting visitors and tourists from Gujarat, elsewhere in India, and even abroad.</p>
+                    <p>Based on the legend of Draupadi's swayamvara, this fair is a celebration of ethnic Gujarat’s folk-dance, music, costumes and the arts, centered around young tribal men and women seeking marriage partners. But even for those not interested in finding a spouse, the romance and excitement in the air are captivating, and every year the fair seems only to grow in popularity, attracting visitors and tourists from Gujarat, elsewhere in India, and even abroad.</p>
                     <br><br>
                     <p>Location: Thangadh <br><br> &#128197; 18th September 2023 to 21th September</p>
                 </div>
-                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/tarnetar-fair/018T0441.JPG"
-                    alt="">
+                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/tarnetar-fair/018T0441.JPG" alt="">
             </div>
             <div class="fest">
                 <div class="festtext">
                     <h1>Dang Darbar Fair</h1>
                     <br><br><br>
-                    <p>Dang Darbar honours the tradition of rulers and other heads of villages gathering for durbars
-                        during the British rule over India. The tradition continues today in the Dangs, a tribal
-                        dominated district, as many of the former Rajas and Naiks are still accorded status unlike the
-                        princely families whose title and privy purses were abolished.</p>
+                    <p>Dang Darbar honours the tradition of rulers and other heads of villages gathering for durbars during the British rule over India. The tradition continues today in the Dangs, a tribal dominated district, as many of the former Rajas and Naiks are still accorded status unlike the princely families whose title and privy purses were abolished.</p>
                     <br><br>
                     <p>Location: Dang <br><br> &#128197; 2nd March 2023 6th March</p>
                 </div>
-                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/saputara-festival/dang-festival-3-min.png"
-                    alt="">
+                <img src="https://www.gujarattourism.com/content/dam/gujrattourism/images/fairs-festivals/saputara-festival/dang-festival-3-min.png" alt="">
             </div>
         </div>
 
         <div id="experiencebox">
             <div id="experienceframe">
-                
                 <h1>Experiences Of Gujarat</h1>
             </div>
             <div id="experiencecontent">
@@ -155,25 +114,21 @@
                     <a href="experience10.html">Golf Tourism</a>
                     <a href="experience11.html">Wellness Tourism</a>
                     <a href="experience12.html">Unesco World Heritage Site</a>
-                    <a href="experience13.html">Indus Valley Civilization Sites</a>
-                </div>
+                    <a href="experience13.html">Indus Valley Civilization Sites</a>                </div>
                 <div id="map">
                     <img src="https://loveyougujarat.files.wordpress.com/2018/06/gujarat.png">
                 </div>
             </div>
         </div>
 
-        <div id="footer" style="overflow: hidden;">
+        <div id="footer">
+            <p><b>Contact No :  </b>+91 6355121720</p>
             <br>
-            <p><b>Name : </b>Viral Dobariya</p>
-            <br>
-            <p><b>Name : </b>Tirth Hansaliya</p>
-            <br>
-            <p><b>Name : </b>Dharmit Fadaudu</p>
-            <br>
-            <p><b>Name : </b>Kunj Garala</p>
+            <p><b>Name :  </b>Viral Dobariya</p>
             <br>
             <br>
+            <a id="linkedina" href="https://www.linkedin.com/in/viral-dobariya-9743982b0/"><img id="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png"></a>
+            <a id="xa" href="https://twitter.com/viraldobariya33"><img id="x" src="https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg?size=338&ext=jpg&ga=GA1.1.87170709.1708041600&semt=ais"></a>
         </div>
         <div id="footer2">
             <p>
@@ -202,5 +157,4 @@
     </div>
     <script src="slider.js"></script>
 </body>
-
 </html>
