--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gujarat Tourism</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="istyle2.css">
+    <link rel="stylesheet" href="kj.css">
     <link rel="shortcut icon" href="https://seeklogo.com/images/G/gujarat-tourism-logo-FAAFFB32AE-seeklogo.com.png">
 </head>
 <body>
